[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braivest"
version = "0.0.1"
authors = [
  { name="Julia Wang", email="julwang@cshl.edu" },
]
description = "Braivest: Brain State VAE"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/engellab/braivest"

[tool.setuptools]
packages = ["braivest", "braivest.analysis", "braivest.model", "braivest.preprocess", "braivest.train"]
